index.css: changed

--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,7 @@
     font-display: swap;
     font-weight: 500;
     src: url('../fonts/CircularStd-Bold (1).oft') format('opentype'),
-        url('../fonts/CircularStd-Black_1.ttf') format('opentype');
+        url('../fonts/CircularStd-Bold(1)') format('opentype');
 }
 
 html,
