--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,7 @@
     font-style: normal;
     font-display: swap;
     font-weight: 500;
-    src: url('css/fonts/CircularStd-Bold (1).ott') format('opentype'),
+    src: url('css/fonts/CircularStd-Bold (1).otf') format('opentype'),
         url('css/fonts/CircularStd-Bold (1).oft') format('opentype');
 }
 
