index.css: changed

--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,7 @@
     font-display: swap;
     font-weight: 500;
     src: url('../fonts/CircularStd-Bold (1).otf') format('opentype'),
-        url('css/fonts/CircularStd-Bold (1).otf') format('opentype');
+        url('../fonts/CircularStd-Bold (1).otf') format('opentype');
 }
 
 html,
