--- a/css/index.css
+++ b/css/index.css
@@ -17,8 +17,8 @@
     font-style: normal;
     font-display: swap;
     font-weight: 500;
-    src: url('../fonts/CircularStd-Bold (1).otf') format('opentype'),
-        url('prism-base16-monokai.dark.css') format('opentype');
+    src: url('/CircularStd-Bold (1).otf') format('opentype'),
+        url('../fonts/CircularStd-Bold (1).otf') format('opentype');
 }
 
 html,
