--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,7 @@
     font-style: normal;
     font-display: swap;
     font-weight: 500;
-    src: url('/assets') format('opentype'),
+    src: url('/as') format('opentype'),
         url('/assets/fonts/CircularStd-Book\ \(1\).otf') format('opentype');
 }
 
