--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@
 }
 
 @font-face {
-    font-family: 'CircularBold';
+    font-family: 'Circular';
     font-style: normal;
     font-display: swap;
     font-weight: 500;
