index.njk: changed

--- a/index.njk
+++ b/index.njk
@@ -6,7 +6,7 @@ eleventyNavigation:
 ---
 
 {% set maxPosts = collections.posts.length | min(3) %}
-<h1>Newest {% if maxPosts == 1 %}Post{% else %}{{ maxPosts }} Posts{% endif %}</h1>
+<h1>Newest {% if maxPosts == 1 %}Post{% else %}{{ maxPosts }} Releases{% endif %}</h1>
 
 {% set postslist = collections.posts | head(-3) %}
 {% set postslistCounter = collections.posts | length %}
