index.njk: changed

--- a/index.njk
+++ b/index.njk
@@ -12,4 +12,4 @@ eleventyNavigation:
 {% set postslistCounter = collections.posts | length %}
 {% include "postslist.njk" %}
 
-<p><a href="{{ '/posts/' | url }}">VIEW ALL STORIES</a>.</p>
+<p>More posts can be found in <a href="{{ '/posts/' | url }}">VIEW ALL STORIES</a>.</p>
