--- a/index.njk
+++ b/index.njk
@@ -12,4 +12,4 @@ eleventyNavigation:
 {% set postslistCounter = collections.posts | length %}
 {% include "postslist.njk" %}
 
-<p><a href="{{ '/posts/' | url }}">View All Stories</a>.</p>
+<p><a class="more-posts" href="{{ '/posts/' | url }}">View All Stories</a>.</p>
