--- a/css/index.css
+++ b/css/index.css
@@ -186,6 +186,7 @@ pre {
 .postlist-link {
   display: inline-block;
   padding: 0.25em 0.1875em; /* 4px 3px /16 */
+  font-size: ;
 }
 .postlist-item-active .postlist-link {
   font-weight: bold;
