index.css: changed

--- a/css/index.css
+++ b/css/index.css
@@ -22,7 +22,7 @@
 }
 
 @font-face {
-    font-family: 'Circular';
+    font-family: 'CircularBody';
     font-style: normal;
     font-display: swap;
     font-weight: 500;
