--- a/css/index.css
+++ b/css/index.css
@@ -27,7 +27,7 @@
     font-display: swap;
     font-weight: 400;
     src: url('CircularStd-Book\ \(1\).otf') format('opentype'),
-        url('CircularStd-Bold.ttf') format('opentype');
+        url('CircularStd-Book\ \(1\).otf') format('opentype');
 }
 
 html,
