--- a/css/index.css
+++ b/css/index.css
@@ -34,7 +34,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: system-ui, sans-serif;
+  font-family: '', system-ui, sans-serif;
   color: var(--darkgray);
   background-color: var(--white);
 }
