--- a/css/index.css
+++ b/css/index.css
@@ -202,7 +202,7 @@ pre {
 .tmpl-home .postlist-link {
   font-size: 3em; /* 19px /16 */
   font-weight: 700;
-  font-size: "";
+  font-size: "CircularBook";
 }
 
 
