--- a/css/index.css
+++ b/css/index.css
@@ -200,7 +200,7 @@ pre {
   font-weight: bold;
 }
 .tmpl-home .postlist-link {
-  font-size: 23.rem; /* 19px /16 */
+  font-size: 2.75rem; /* 19px /16 */
   font-weight: 500;
   font-size: "CircularBody";
   letter-spacing: -0.02em;
