--- a/css/index.css
+++ b/css/index.css
@@ -217,7 +217,7 @@ pre {
   margin-left: 0.8em; /* 8px /10 */
   background-color: var(--red);
   color: var(--white);
-  border-radius: 0.5em; /* 3px /12 */
+  border-radius: 100px; /* 3px /12 */
   text-decoration: none;
 }
 a[href].post-tag,
