--- a/css/index.css
+++ b/css/index.css
@@ -209,7 +209,7 @@ pre {
 
 /* Tags */
 .post-tag {
-  display: ;
+  display: inline-block;
   vertical-align: text-top;
   text-transform: uppercase;
   font-size: 0.625em; /* 10px /16 */
